2008-03-04  Joseph Myers  <joseph@codesourcery.com>  (tiny change)

	* doc/texinfo.tex (\includezzz): Use \turnoffactive before
	expanding @value.

2008-03-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (info_search_internal): Reword wrap-around
	messages.
	* configure.ac (AM_INIT_AUTOMAKE): Finally remove dist-bzip2.

2008-03-05  Sergey Poznyakoff  <gray@gnu.org.ua>

	* util/gendocs.sh: Pass --node-files to texi2html only together
	with the --split option.

	* info/session.c (last_node_p): Remove unused variable.
	(info_search_internal): Print a message if the search wraps over
	the end or beginning of the document.

	* configure.ac (AM_INIT_AUTOMAKE): Move all automake options here.
	Add dist-bzip2 for completeness.
	* Makefile.am (AUTOMAKE_OPTIONS): Remove in favor of
	AM_INIT_AUTOMAKE.
	* AUTHORS: Update the URL of Translation Project.

2008-03-04  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (_scroll_backward): Place cursor at the end of
	node if cursor_movement_scrolls_p is on.

	* Makefile.am (AUTOMAKE_OPTIONS): Raise version requirement to
	1.10.1. This is needed for dist-lzma.

	* system.h: Include <ctype.h>
	* info/session.c (scroll_last_node_choices, scroll_last_node): New
	variables.
	(forward_move_node_structure): Special behavior when a scrolling
	command is issued while on the last node.
	* info/session.h (scroll_last_node_choices, scroll_last_node): New
	variables.
	(SLN_Stop,SLN_Scroll,SLN_Top): New defines.
	* info/variables.c (info_variables): New variable
	scroll-last-node.
	* info/variables.h (scroll_last_node): New variable.
	* doc/info-stnd.texi: Document scrolling behavior at the last node
	and the scroll-last-node variable.
	* NEWS: Document scrolling behavior at the last node.

2008-03-02  Karl Berry  <karl@gnu.org>

	* configure.ac (AM_INIT_AUTOMAKE): dist-lzma instead of dist-bzip2.

2008-03-01  Juan Manuel Guerrero  <juan.guerrero@gmx.de>

	DJGPP specific issues.