@@ -1,4 +1,9 @@
-2008-03-04  Joseph Myers  <joseph@codesourcery.com>  (tiny change)
+2008-03-07  Karl Berry  <karl@gnu.org>
+
+	* info/infodoc.c (info_internal_help_text): reorder, regroup.
+	Suggestion from Benno Schulenberg, 06 Mar 2008 11:59:06.
+
+2008-03-07  Joseph Myers  <joseph@codesourcery.com>  (tiny change)
 
 	* doc/texinfo.tex (\includezzz): Use \turnoffactive before
 	expanding @value.
